objects/Ucast__c/Ucast__c.object-meta.xml
<CustomObject>
    <description>Definuje vztah firmy (ev. kontaktu) vůči akci/programu NP. Vztah může mít několik variant, je ovlivněn typem záznamu účast. Účast pod sebou eviduje smlouvy a v případě, že se jedná o účast spojenou s hodnocením objektu, eviduje v sobě i údaje o objektu.</description>
    <label>Účast</label>
    <nameField>
        <displayFormat>ÚČAST-{YY}-{0000000}</displayFormat>
        <label>Kód účasti</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Účasti</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>