objects/Ucast__c/fields/agreements_aggregator_callback__c.field-meta.xml
<CustomField>
    <fullName>agreements_aggregator_callback__c</fullName>
    <label>_agreements_aggregator_callback</label>
    <summarizedField>Smlouva__c.agreements_aggregator__c</summarizedField>
    <summaryForeignKey>Smlouva__c.Ucast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>