objects/Ucast__c/fields/Akce__c.field-meta.xml
<CustomField>
    <fullName>Akce__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Akce</label>
    <referenceTo>Akce__c</referenceTo>
    <relationshipLabel>Účast</relationshipLabel>
    <relationshipName>Akce_del1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>