objects/Ucast__c/fields/Cas__c.field-meta.xml
<CustomField>
    <fullName>Cas__c</fullName>
    <label>Čas</label>
    <type>Time</type>
</CustomField>