objects/Ucast__c/fields/Castka_prilezitosti__c.field-meta.xml
<CustomField>
    <fullName>Castka_prilezitosti__c</fullName>
    <label>Částka</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>