objects/Ucast__c/fields/Cena_obcerstveni_bez_DPH__c.field-meta.xml
<CustomField>
    <fullName>Cena_obcerstveni_bez_DPH__c</fullName>
    <label>Cena občerstvení vč DPH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>