objects/Ucast__c/fields/Cena_pronajmu__c.field-meta.xml
<CustomField>
    <fullName>Cena_pronajmu__c</fullName>
    <label>Cena pronájmu bez DPH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>