objects/Ucast__c/fields/Cislo_navazujici_ucasti__c.field-meta.xml
<CustomField>
    <fullName>Cislo_navazujici_ucasti__c</fullName>
    <formula>IF(ISBLANK(Navazuje_na_ucast__c ),0,
IF(ISBLANK( Navazuje_na_ucast__r.Navazuje_na_ucast__c ), 1,
IF(ISBLANK(  Navazuje_na_ucast__r.Navazuje_na_ucast__r.Navazuje_na_ucast__c ), 2,
IF(ISBLANK(  Navazuje_na_ucast__r.Navazuje_na_ucast__r.Navazuje_na_ucast__r.Navazuje_na_ucast__c ), 3,
IF(ISBLANK(  Navazuje_na_ucast__r.Navazuje_na_ucast__r.Navazuje_na_ucast__r.Navazuje_na_ucast__r.Navazuje_na_ucast__c ), 4,
5
)))))</formula>
    <label>Číslo navazující účasti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>