objects/Ucast__c/fields/Dalsi_postup__c.field-meta.xml
<CustomField>
    <fullName>Dalsi_postup__c</fullName>
    <label>Další postup</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>