objects/Ucast__c/fields/Datum_dalsi_akce__c.field-meta.xml
<CustomField>
    <fullName>Datum_dalsi_akce__c</fullName>
    <label>Datum další akce</label>
    <type>Date</type>
</CustomField>