objects/Ucast__c/fields/Datum_daru__c.field-meta.xml
<CustomField>
    <fullName>Datum_daru__c</fullName>
    <label>Datum daru</label>
    <type>Date</type>
</CustomField>