objects/Ucast__c/fields/Datum_overeni_udaju__c.field-meta.xml
<CustomField>
    <fullName>Datum_overeni_udaju__c</fullName>
    <description>Zapište datum, kdy došlo k ověření údajů v databázi.</description>
    <inlineHelpText>Zapište datum, kdy došlo k ověření údajů v databázi.</inlineHelpText>
    <label>Datum ověření údajů</label>
    <type>Date</type>
</CustomField>