objects/Ucast__c/fields/Datum_podani__c.field-meta.xml
<CustomField>
    <fullName>Datum_podani__c</fullName>
    <label>Datum podání</label>
    <type>Date</type>
</CustomField>