objects/Ucast__c/fields/Datum_podpisu_smlouvy_o_certifikaci_CV__c.field-meta.xml
<CustomField>
    <fullName>Datum_podpisu_smlouvy_o_certifikaci_CV__c</fullName>
    <label>Datum podpisu smlouvy o certifikaci CV</label>
    <summarizedField>Smlouva__c.Platnost_od__c</summarizedField>
    <summaryFilterItems>
        <field>Smlouva__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>O certifikaci CV</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Smlouva__c.Stav__c</field>
        <operation>equals</operation>
        <value>Připravena,Platná</value>
    </summaryFilterItems>
    <summaryForeignKey>Smlouva__c.Ucast__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>