objects/Ucast__c/fields/Datum_prvniho_ukonu__c.field-meta.xml
<CustomField>
    <fullName>Datum_prvniho_ukonu__c</fullName>
    <label>Datum prvního úkonu</label>
    <type>Date</type>
</CustomField>