objects/Ucast__c/fields/Datum_ukonceni__c.field-meta.xml
<CustomField>
    <fullName>Datum_ukonceni__c</fullName>
    <label>Datum ukončení</label>
    <type>Date</type>
</CustomField>