objects/Ucast__c/fields/DPH_15__c.field-meta.xml
<CustomField>
    <fullName>DPH_15__c</fullName>
    <formula>Cena_obcerstveni_bez_DPH__c/115*15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DPH 15%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>