objects/Ucast__c/fields/dph_21__c.field-meta.xml
<CustomField>
    <fullName>dph_21__c</fullName>
    <description>DPH 21%</description>
    <formula>Cena_pronajmu__c * 0.21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DPH 21%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>