objects/Ucast__c/fields/Feasibility_vice__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_vice__c</fullName>
    <label>Feasibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>potenciální dárce</fullName>
            </value>
            <value>
                <fullName>otevírač dveří</fullName>
            </value>
            <value>
                <fullName>opinion leader</fullName>
            </value>
            <value>
                <fullName>potencionální člen kabinetu</fullName>
            </value>
            <value>
                <fullName>dobrovolník</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>