objects/Ucast__c/fields/Firemni_web__c.field-meta.xml
<CustomField>
    <fullName>Firemni_web__c</fullName>
    <formula>&quot;http://&quot; + Ucet__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firemní web</label>
    <type>Text</type>
</CustomField>