objects/Ucast__c/fields/Firma_dorucovaci_adresa__c.field-meta.xml
<CustomField>
    <fullName>Firma_dorucovaci_adresa__c</fullName>
    <formula>Ucet__r.ShippingStreet + BR()+
Ucet__r.ShippingPostalCode + &quot; &quot; + Ucet__r.ShippingCity + BR()+
Ucet__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doručovací adresa</label>
    <type>Text</type>
</CustomField>