objects/Ucast__c/fields/Hodnotitel__c.field-meta.xml
<CustomField>
    <fullName>Hodnotitel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hodnotitel</label>
    <referenceTo>Hodnotitel__c</referenceTo>
    <relationshipLabel>Účast</relationshipLabel>
    <relationshipName>Ucast</relationshipName>
    <type>Lookup</type>
</CustomField>