objects/Ucast__c/fields/ID_Objektu__c.field-meta.xml
<CustomField>
    <fullName>ID_Objektu__c</fullName>
    <externalId>true</externalId>
    <label>ID Objektu</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>