objects/Ucast__c/fields/Info_ke_zdroji__c.field-meta.xml
<CustomField>
    <fullName>Info_ke_zdroji__c</fullName>
    <label>Info ke zdroji</label>
    <type>TextArea</type>
</CustomField>