objects/Ucast__c/fields/Interview_klasifikace_priorit__c.field-meta.xml
<CustomField>
    <fullName>Interview_klasifikace_priorit__c</fullName>
    <label>Interview - klasifikace priorit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Top kandidát (A)</fullName>
            </value>
            <value>
                <fullName>Slibný kandidát (B)</fullName>
            </value>
            <value>
                <fullName>Možný kandidát (C)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>