objects/Ucast__c/fields/Kategorie_projektu__c.field-meta.xml
<CustomField>
    <fullName>Kategorie_projektu__c</fullName>
    <label>Soutěžní kategorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volná krajina</fullName>
            </value>
            <value>
                <fullName>Zastavěná území</fullName>
            </value>
            <value>
                <fullName>Pracovní prostředí</fullName>
            </value>
            <value>
                <fullName>Náš domov</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>