objects/Ucast__c/fields/Komunikace_s_darcem__c.field-meta.xml
<CustomField>
    <fullName>Komunikace_s_darcem__c</fullName>
    <label>Komunikace s dárcem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Přijato</fullName>
            </value>
            <value>
                <fullName>Zasláno poděkování</fullName>
            </value>
            <value>
                <fullName>Trvalý dárce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>