objects/Ucast__c/fields/Korektura_2016__c.field-meta.xml
<CustomField>
    <fullName>Korektura_2016__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Korektura 2016</label>
    <type>Checkbox</type>
</CustomField>