objects/Ucast__c/fields/Kraj_realizace_DoProstory__c.field-meta.xml
<CustomField>
    <fullName>Kraj_realizace_DoProstory__c</fullName>
    <label>Kraj realizace DoProstory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>nevíme</fullName>
            </value>
            <value>
                <fullName>Jihočeský</fullName>
            </value>
            <value>
                <fullName>Jihomoravský</fullName>
            </value>
            <value>
                <fullName>Karlovarský</fullName>
            </value>
            <value>
                <fullName>Královehradecký</fullName>
            </value>
            <value>
                <fullName>Liberecký</fullName>
            </value>
            <value>
                <fullName>Moravskoslezský</fullName>
            </value>
            <value>
                <fullName>Olomoucký</fullName>
            </value>
            <value>
                <fullName>Pardubický</fullName>
            </value>
            <value>
                <fullName>Plzeňský</fullName>
            </value>
            <value>
                <fullName>Praha</fullName>
            </value>
            <value>
                <fullName>Ústecký</fullName>
            </value>
            <value>
                <fullName>Středočeský</fullName>
            </value>
            <value>
                <fullName>Vysočina</fullName>
            </value>
            <value>
                <fullName>Zlínský</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>