objects/Ucast__c/fields/M_s_n_poplatek_bez_DPH__c.field-meta.xml
<CustomField>
    <fullName>M_s_n_poplatek_bez_DPH__c</fullName>
    <label>Měsíční poplatek (bez DPH)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>