objects/Ucast__c/fields/Nabizene_produkty__c.field-meta.xml
<CustomField>
    <fullName>Nabizene_produkty__c</fullName>
    <label>Nabízené produkty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>