objects/Ucast__c/fields/Navazuje_na_ucast__c.field-meta.xml
<CustomField>
    <fullName>Navazuje_na_ucast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vyplňte v případě, kdy účast prodlužuje nebo bezprostředně navazuje na jinou účast.</description>
    <inlineHelpText>Vyplňte v případě, kdy účast prodlužuje nebo bezprostředně navazuje na jinou účast.</inlineHelpText>
    <label>Navazuje na účast</label>
    <referenceTo>Ucast__c</referenceTo>
    <relationshipLabel>Navazující účasti</relationshipLabel>
    <relationshipName>Navazujici_ucasti</relationshipName>
    <type>Lookup</type>
</CustomField>