objects/Ucast__c/fields/Nazev__c.field-meta.xml
<CustomField>
    <fullName>Nazev__c</fullName>
    <description>jedinečný identifikátor účasti</description>
    <label>Název</label>
    <length>128</length>
    <type>Text</type>
</CustomField>