objects/Ucast__c/fields/Nazev_objektu__c.field-meta.xml
<CustomField>
    <fullName>Nazev_objektu__c</fullName>
    <label>Název objektu</label>
    <length>128</length>
    <type>Text</type>
</CustomField>