objects/Ucast__c/fields/Nemovitost__c.field-meta.xml
<CustomField>
    <fullName>Nemovitost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nemovitost</label>
    <referenceTo>Nemovitost__c</referenceTo>
    <relationshipLabel>Účasti</relationshipLabel>
    <relationshipName>Ucasti</relationshipName>
    <type>Lookup</type>
</CustomField>