objects/Ucast__c/fields/Ocekavany_prijem__c.field-meta.xml
<CustomField>
    <fullName>Ocekavany_prijem__c</fullName>
    <label>Očekávaný příjem</label>
    <summarizedField>Smlouva__c.Castka_plneni__c</summarizedField>
    <summaryFilterItems>
        <field>Smlouva__c.Stav_schvalovani__c</field>
        <operation>equals</operation>
        <value>Schváleno</value>
    </summaryFilterItems>
    <summaryForeignKey>Smlouva__c.Ucast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>