objects/Ucast__c/fields/Opakovane_pronajmy__c.field-meta.xml
<CustomField>
    <fullName>Opakovane_pronajmy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opakované pronájmy nebo akce</label>
    <type>Checkbox</type>
</CustomField>