objects/Ucast__c/fields/Pocet_smluv_darovaci__c.field-meta.xml
<CustomField>
    <fullName>Pocet_smluv_darovaci__c</fullName>
    <label>Počet aktivních dárcovských smluv</label>
    <summaryFilterItems>
        <field>Smlouva__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Darovací</value>
    </summaryFilterItems>
    <summaryForeignKey>Smlouva__c.Ucast__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>