objects/Ucast__c/fields/Pocet_ukonu__c.field-meta.xml
<CustomField>
    <fullName>Pocet_ukonu__c</fullName>
    <label>Počet úkonů</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>