objects/Ucast__c/fields/Politicke_naladeni__c.field-meta.xml
<CustomField>
    <fullName>Politicke_naladeni__c</fullName>
    <label>Politické naladění</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>nevím</fullName>
                <default>true</default>
                <label>nevím</label>
            </value>
            <value>
                <fullName>1 nám nakloněno</fullName>
            </value>
            <value>
                <fullName>2 víceméně nakloněno</fullName>
            </value>
            <value>
                <fullName>3 neutrální</fullName>
            </value>
            <value>
                <fullName>4 špatné</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>