objects/Ucast__c/fields/Popis_co_resi__c.field-meta.xml
<CustomField>
    <fullName>Popis_co_resi__c</fullName>
    <label>Popis co řeší</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>