objects/Ucast__c/fields/Posledni_platna_smlouva_do__c.field-meta.xml
<CustomField>
    <fullName>Posledni_platna_smlouva_do__c</fullName>
    <label>Poslední platná smlouva vyprší</label>
    <summarizedField>Smlouva__c.Konec_obdobi_platnosti__c</summarizedField>
    <summaryFilterItems>
        <field>Smlouva__c.Stav__c</field>
        <operation>equals</operation>
        <value>Platná</value>
    </summaryFilterItems>
    <summaryForeignKey>Smlouva__c.Ucast__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>