objects/Ucast__c/fields/Potencialni_velikost_daru__c.field-meta.xml
<CustomField>
    <fullName>Potencialni_velikost_daru__c</fullName>
    <label>Potenciální velikost daru</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>