objects/Ucast__c/fields/Potrebne_kapacity__c.field-meta.xml
<CustomField>
    <fullName>Potrebne_kapacity__c</fullName>
    <label>Potřebné kapacity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Celý areál</fullName>
            </value>
            <value>
                <fullName>Sál</fullName>
            </value>
            <value>
                <fullName>Velká zasedačka</fullName>
            </value>
            <value>
                <fullName>Malá zasedačka</fullName>
            </value>
            <value>
                <fullName>Otevřená zahrada</fullName>
            </value>
            <value>
                <fullName>Boromejská zahrada</fullName>
            </value>
            <value>
                <fullName>Venkovní kuchyně</fullName>
            </value>
            <value>
                <fullName>Gril/Pec/Udírna</fullName>
            </value>
            <value>
                <fullName>Pergola u bistra</fullName>
            </value>
            <value>
                <fullName>Pergola u oveček</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>