objects/Ucast__c/fields/Poznamky_k_fakturaci__c.field-meta.xml
<CustomField>
    <fullName>Poznamky_k_fakturaci__c</fullName>
    <label>Poznámky k fakturaci</label>
    <type>TextArea</type>
</CustomField>