objects/Ucast__c/fields/Pracovnik__c.field-meta.xml
<CustomField>
    <fullName>Pracovnik__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Zodpovědný koordinátor</label>
    <referenceTo>Pracovnik__c</referenceTo>
    <relationshipLabel>Účasti v zodpovědnosti</relationshipLabel>
    <relationshipName>Pracovnik</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>