objects/Ucast__c/fields/Pravdepodobnost_daru__c.field-meta.xml
<CustomField>
    <fullName>Pravdepodobnost_daru__c</fullName>
    <label>Pravděpodobnost daru</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>