objects/Ucast__c/fields/Predana_certifikace__c.field-meta.xml
<CustomField>
    <fullName>Predana_certifikace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Předán štít</label>
    <type>Checkbox</type>
</CustomField>