objects/Ucast__c/fields/Predmet__c.field-meta.xml
<CustomField>
    <fullName>Predmet__c</fullName>
    <label>Předmět</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pachtovní smlouva</fullName>
            </value>
            <value>
                <fullName>Způsob hospodaření</fullName>
            </value>
            <value>
                <fullName>Pozemkové úpravy</fullName>
            </value>
            <value>
                <fullName>PÚ + změna hospodaření</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>