objects/Ucast__c/fields/Prilezitost_pro__c.field-meta.xml
<CustomField>
    <fullName>Prilezitost_pro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>... další kolegy</description>
    <label>Zároveň příležitost pro</label>
    <referenceTo>Pracovnik__c</referenceTo>
    <relationshipLabel>Účasti (Zároveň příležitost pro)</relationshipLabel>
    <relationshipName>asti</relationshipName>
    <type>Lookup</type>
</CustomField>