objects/Ucast__c/fields/Primarni_kontakt__c.field-meta.xml
<CustomField>
    <fullName>Primarni_kontakt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primární kontakt</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Účasti</relationshipLabel>
    <relationshipName>Ucast</relationshipName>
    <type>Lookup</type>
</CustomField>