objects/Ucast__c/fields/Primarni_kontakt_email__c.field-meta.xml
<CustomField>
    <fullName>Primarni_kontakt_email__c</fullName>
    <formula>Primarni_kontakt__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primární kontakt - email</label>
    <type>Text</type>
</CustomField>