objects/Ucast__c/fields/Primarni_kontakt_telefon__c.field-meta.xml
<CustomField>
    <fullName>Primarni_kontakt_telefon__c</fullName>
    <formula>Primarni_kontakt__r.Phone + &quot;; &quot; + Primarni_kontakt__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primární kontakt - telefon</label>
    <type>Text</type>
</CustomField>