objects/Ucast__c/fields/Pripadova_studie__c.field-meta.xml
<CustomField>
    <fullName>Pripadova_studie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Případová studie</label>
    <type>Checkbox</type>
</CustomField>