objects/Ucast__c/fields/Produkt_OZ__c.field-meta.xml
<CustomField>
    <fullName>Produkt_OZ__c</fullName>
    <label>Produkt OZ</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jen pronájem prostor</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Webinář (-50%)</fullName>
            </value>
            <value>
                <fullName>Webinář</fullName>
            </value>
            <value>
                <fullName>konference</fullName>
                <label>Konference</label>
            </value>
            <value>
                <fullName>seminář</fullName>
                <default>true</default>
                <label>Seminář</label>
            </value>
            <value>
                <fullName>soukromá oslava</fullName>
                <label>Soukromá oslava</label>
            </value>
            <value>
                <fullName>firemní večírek</fullName>
                <label>Firemní večírek</label>
            </value>
            <value>
                <fullName>team-building</fullName>
                <label>Team-building</label>
            </value>
            <value>
                <fullName>bylinková dílna</fullName>
                <label>Bylinková dílna</label>
            </value>
            <value>
                <fullName>Víno z blízka</fullName>
            </value>
            <value>
                <fullName>Den v OZ</fullName>
            </value>
            <value>
                <fullName>Duel vinařů</fullName>
            </value>
            <value>
                <fullName>Engagement v OZ</fullName>
            </value>
            <value>
                <fullName>Rodinný den</fullName>
            </value>
            <value>
                <fullName>Tajemství ukryté v OZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>