objects/Ucast__c/fields/Provedene_ukony__c.field-meta.xml
<CustomField>
    <fullName>Provedene_ukony__c</fullName>
    <label>Provedené úkony</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>