objects/Ucast__c/fields/Reagovat_znovu_do__c.field-meta.xml
<CustomField>
    <fullName>Reagovat_znovu_do__c</fullName>
    <description>Kdy je nutné se kontaktu znovu ozvat.</description>
    <label>Reagovat znovu do</label>
    <type>Date</type>
</CustomField>