objects/Ucast__c/fields/result_aggregator_callback__c.field-meta.xml
<CustomField>
    <fullName>result_aggregator_callback__c</fullName>
    <label>_result_aggregator_callback</label>
    <summarizedField>Kontrola__c.result_aggregator__c</summarizedField>
    <summaryForeignKey>Kontrola__c.Ucast__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>