objects/Ucast__c/fields/Rok_posledni_kontroly__c.field-meta.xml
<CustomField>
    <fullName>Rok_posledni_kontroly__c</fullName>
    <formula>IF (Left (TEXT( result_aggregator_callback__c ), 4) == &quot;0&quot;, &quot;Nekontrolováno&quot;, Left(TEXT( result_aggregator_callback__c ), 4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rok poslední kontroly</label>
    <type>Text</type>
</CustomField>