objects/Ucast__c/fields/Rozhodovani_o_rozpoctu__c.field-meta.xml
<CustomField>
    <fullName>Rozhodovani_o_rozpoctu__c</fullName>
    <description>Kdy je ve firmě vzhledem k dojednávané službě rozhodováno o rozpočtu.</description>
    <label>Rozhodování o rozpočtu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>nezjištěno</fullName>
                <default>true</default>
                <label>nezjištěno</label>
            </value>
            <value>
                <fullName>jaro</fullName>
            </value>
            <value>
                <fullName>podzim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>