objects/Ucast__c/fields/status_aggregator__c.field-meta.xml
<CustomField>
    <fullName>status_aggregator__c</fullName>
    <formula>IF ( Stav__c  == &quot;Uzavřeno&quot;, 1, 0)
+
IF ( Stav__c  == &quot;Potenciální&quot;, 100, 0)
+
IF ( Stav__c  == &quot;Neaktivní&quot;, 10000, 0)
+
IF ( Stav__c  == &quot;Aktivní&quot;, 1000000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_status_aggregator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>