objects/Ucast__c/fields/status_aggregator_callback__c.field-meta.xml
<CustomField>
    <fullName>status_aggregator_callback__c</fullName>
    <label>_status_aggregator_callback</label>
    <summarizedField>Smlouva__c.status_aggregator_callback__c</summarizedField>
    <summaryForeignKey>Smlouva__c.Ucast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>