objects/Ucast__c/fields/status_aggregator_certifikace_callback__c.field-meta.xml
<CustomField>
    <fullName>status_aggregator_certifikace_callback__c</fullName>
    <label>_status_aggregator_certifikace_callback</label>
    <summarizedField>Smlouva__c.last_status_aggregator__c</summarizedField>
    <summaryForeignKey>Smlouva__c.Ucast__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>