objects/Ucast__c/fields/Stav__c.field-meta.xml
<CustomField>
    <fullName>Stav__c</fullName>
    <formula>IF ( TEXT(Uroven_spoluprace__c ) == &quot;Uzavřeno&quot;, &quot;Uzavřeno&quot;,

 Stav_smluv__c 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stav</label>
    <type>Text</type>
</CustomField>