objects/Ucast__c/fields/Stav_jednani_s_darcem__c.field-meta.xml
<CustomField>
    <fullName>Stav_jednani_s_darcem__c</fullName>
    <label>Stav jednání s dárcem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Návrh</fullName>
            </value>
            <value>
                <fullName>Prověřen</fullName>
            </value>
            <value>
                <fullName>Vyhodnocen jako prospect</fullName>
            </value>
            <value>
                <fullName>Návrh na schůzku</fullName>
            </value>
            <value>
                <fullName>Schůzka</fullName>
            </value>
            <value>
                <fullName>Přislíben dar</fullName>
            </value>
            <value>
                <fullName>Smlouva</fullName>
            </value>
            <value>
                <fullName>Dárce</fullName>
            </value>
            <value>
                <fullName>Ztracen</fullName>
            </value>
            <value>
                <fullName>Zamítnut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>