objects/Ucast__c/fields/Stav_nominovan_ho_projektu__c.field-meta.xml
<CustomField>
    <fullName>Stav_nominovan_ho_projektu__c</fullName>
    <label>Stav nominovaného projektu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rozpracovaná přihláška</fullName>
            </value>
            <value>
                <fullName>Odeslaná přihláška</fullName>
            </value>
            <value>
                <fullName>Zamítnut porotou</fullName>
            </value>
            <value>
                <fullName>Vybrán pro soutěž</fullName>
            </value>
            <value>
                <fullName>Vítěz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>