objects/Ucast__c/fields/Stav_smluv__c.field-meta.xml
<CustomField>
    <fullName>Stav_smluv__c</fullName>
    <formula>IF (agreements_aggregator_callback__c  &gt;= 1000000000, &quot;Aktivní&quot;,
IF (agreements_aggregator_callback__c  &gt;= 1000, &quot;Neaktivní&quot;,
IF (agreements_aggregator_callback__c  &gt; 0, &quot;Uzavřeno&quot;
, &quot;Potenciální&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stav smluv</label>
    <type>Text</type>
</CustomField>