objects/Ucast__c/fields/Stav_zp__c.field-meta.xml
<CustomField>
    <fullName>Stav_zp__c</fullName>
    <inlineHelpText>v procesu - po KPÚ dojde ke změně pachtýře, vypovězení pachtovní smlouvy
vyřízeno	teoretický dotaz, stručný dotaz, který nevede ke změně hospodaření
změna dosažena - propachtováno, změna pachtýře, změna podmínek pachtu
změna není nutná -	současné hospodaření je OK, jenom doplňující dotaz
neúspěch - změna nedosažena na straně vlastníka, nedomluvy se zemědělcem atd.</inlineHelpText>
    <label>Stav</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V procesu</fullName>
            </value>
            <value>
                <fullName>Vyřízeno</fullName>
            </value>
            <value>
                <fullName>Změna dosažena</fullName>
            </value>
            <value>
                <fullName>Změna není nutná</fullName>
            </value>
            <value>
                <fullName>Neúspěch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>