objects/Ucast__c/fields/Technick_podpora_ro_n__c.field-meta.xml
<CustomField>
    <fullName>Technick_podpora_ro_n__c</fullName>
    <label>Technická podpora (ročně)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>