objects/Ucast__c/fields/Termin_realizace__c.field-meta.xml
<CustomField>
    <fullName>Termin_realizace__c</fullName>
    <label>Termín realizace (od)</label>
    <type>Date</type>
</CustomField>