objects/Ucast__c/fields/Termin_realizace_do__c.field-meta.xml
<CustomField>
    <fullName>Termin_realizace_do__c</fullName>
    <label>Termín realizace (do)</label>
    <type>Date</type>
</CustomField>