objects/Ucast__c/fields/Typ_d_rce__c.field-meta.xml
<CustomField>
    <fullName>Typ_d_rce__c</fullName>
    <inlineHelpText>Individuální dárci s dary nad 1 000 Kč a firemní dary včetně smluv</inlineHelpText>
    <label>Typ dárce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individuální</fullName>
            </value>
            <value>
                <fullName>Firemní</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>