objects/Ucast__c/fields/Typ_objektu__c.field-meta.xml
<CustomField>
    <fullName>Typ_objektu__c</fullName>
    <label>Typ objektu</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ubytovací</fullName>
            </value>
            <value>
                <fullName>Stravování</fullName>
            </value>
            <value>
                <fullName>Kempy</fullName>
            </value>
            <value>
                <fullName>Turistický cíl</fullName>
            </value>
            <value>
                <fullName>Přírodní památka</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>